# Labs-1-4-semester-

./: .gitignore  README
2sem/: CMakeLists.txt
2sem/20/: 1  2  c  script.sh  отчет.odt
2sem/21/: 1.qwe  123qwe  2.qwe  s.sh  отчет.odt
2sem/22/: отчет.odt
2sem/23/: Tree.c  a.out  отчет.odt
2sem/24/: 24.c  отчет.odt
2sem/26/: main  main.c  makefile  sort.c  sort.h  testData  udt.c  udt.h  отчет.odt
2sem/DM_KP/: u.pyw
2sem/KP6/: Otchet.odt  data_for_copy  otchyot.odt  program.c  test
2sem/KP7/: a.out  gen.c  kp7.c  otchyot(1).odt  testData.txt  vector.c  vector.h
2sem/KP8/: a.out  otchyot(2).odt
2sem/KP9/: kp9.c  otchyot(1).odt  testData.txt
2sem/w/: binary_search.c  matrix  matrix.c  pol.c  quicksort.c  shell.c  tmp.c
2sem/w/10/: hash.c
2sem/w/6/: Tree.c
3sem/: CMakeLists.txt
3sem/OS/1/: 1.c  1.txt  1txt  a.out
3sem/OS/2/: 2.c  a.out
3sem/OS/3/: 3.c  a.out
3sem/OS/4/: 4.c  main.c
3sem/OS/5/: main.c
3sem/OS/6_process/: a.out  main.cpp
3sem/OS/7/: a.out  main.cpp
3sem/OS/ch/: a.out  chmod.c  chown.c
3sem/OS/fileCr/: a.out  f.c  ls.c
3sem/OS/lec/: lec
3sem/OS/semoph/: a.out  client.c  server.c
3sem/OS/server/: client  client.c  message.h  server  server.c  server_sem.c
3sem/OS/socket/: Package.h
3sem/OS/socket/client/: client.c
3sem/OS/socket/server/: server.c
3sem/fundal/1/1/: 1.c  a.out
3sem/fundal/1/10/: a.out  main.c
3sem/fundal/1/11/: a.out  data  main.c  out
3sem/fundal/1/12/: a.out  data  main.c  out
3sem/fundal/1/13/: a.out  in  main.c
3sem/fundal/1/14/: a.out  main.c  tmp
3sem/fundal/1/15/: 1  2  3  a.out  main.c
3sem/fundal/1/16/: 16.c
3sem/fundal/1/17/: a.out  data  main.c
3sem/fundal/1/18/: a.out  main.c
3sem/fundal/1/19/: a.out  main.c
3sem/fundal/1/2/: 2.c  a.out
3sem/fundal/1/20/: 1.c
3sem/fundal/1/3/: 3.c  a.out  fileFor3  tmp3
3sem/fundal/1/4/: 1.c  a.out
3sem/fundal/lec/: algo.odt  algo1
3sem/matprac/: 1  scatter_charts.py
3sem/matprac/PyQtGraph/: CustomGraphItem.py  Drag_A_Point.py  Drag_chart.py  Dragging.py  MouseSelection.py  PyQt-EventFilter.py  PyQtGraph.c  ROI-simple.py  ROI-view.py  Scrolling_plots.py  ViewBox.py  ViewBoxFeatures.py  crosshair.py  crosshair_only.py  dynamic_plot.py  label-minimal.py  legend.py  myplot-problem.py  plot_custom-CRUSH.py  scatter_charts.py  scatter_plots.py  symbol_scatter_charts.py
4sem/fundal/2/: CMakeLists.txt
4sem/fundal/4/: CMakeLists.txt
(+257 files in other folders)
