cmake_minimum_required(VERSION 3.6)
project(.)
set(CMAKE_CXX_STANDARD 11)
#add_executable(2sem KP8/kp8.c)
#add_executable(2sem 24/24.c 24/stack.c 24/stack.h)
#add_executable(2sem KP8/kp8.c)
#add_executable(2sem KP6/program.c KP6/bst.c KP6/bst.h)
#add_executable(2sem KP9/kp9.c)
#add_executable(2sem 26/udt.c 26/udt.h 26/sort.c 26/sort.h 26/main.c)
#add_executable(2sem KP7/kp7.c KP7/vector.h KP7/vector.c)
#add_executable(2sem w/tmp.c)
#add_executable(2sem 23/Tree.c)
add_executable(2sem w/quicksort.c)
target_link_libraries(2sem m)