cmake_minimum_required(VERSION 3.6)
project(fundal)
#set(CMAKE_CXX_STANDARD fundal/11)
add_executable(fundal3.12 fundal/3/12/main.c)
add_executable(fundal4.7 fundal/4/7/main.c)
#add_executable(server OS/socket/server/server.c)
#add_executable(client OS/socket/client/client.c)

target_link_libraries(fundal3.12 m)
target_link_libraries(fundal4.7 m)
