cmake_minimum_required(VERSION 3.6)
project(fundal)
#set(CMAKE_CXX_STANDARD fundal/11)

add_executable(fundal4.10 fundal/4/10/main.c)
add_executable(fundal5.3 fundal/5/3/main.cpp)
add_executable(server OS/socket/server/server.c)
add_executable(client OS/socket/client/client.c)
add_executable(chown OS/ch/chown.c)
add_executable(ls OS/fileCr/ls.c)